test_regress/t/t_preproc_ifexpr_bad.out
%Error: t/t_preproc_ifexpr_bad.v:13:14: `elsif with no matching `if
   13 | `elsif ( ONE )  // BAD: elsif without if
      |              ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_preproc_ifexpr_bad.v:14:1: `endif with no matching `if
   14 | `endif
      | ^~~~~~
%Error: t/t_preproc_ifexpr_bad.v:16:10: Syntax error in `ifdef () expression
   16 | `ifdef ( ) // BAD: Missing value
      |          ^
%Error: t/t_preproc_ifexpr_bad.v:19:17: Syntax error in `ifdef () expression
   19 | `ifdef ( && ZERO)  // BAD: Expr
      |                 ^
%Error: t/t_preproc_ifexpr_bad.v:22:18: Syntax error in `ifdef () expression
   22 | `ifdef ( ZERO && )  // BAD: Expr
      |                  ^
%Error: t/t_preproc_ifexpr_bad.v:25:10: Syntax error in `ifdef () expression; unexpected: 'TEXT'
   25 | `ifdef ( 1 )  // BAD: Constant
      |          ^
%Error: t/t_preproc_ifexpr_bad.v:25:12: Syntax error in `ifdef () expression
   25 | `ifdef ( 1 )  // BAD: Constant
      |            ^
%Error: t/t_preproc_ifexpr_bad.v:28:14: Syntax error in `ifdef () expression; unexpected: 'TEXT'
   28 | `ifdef ( ONE & ZERO)  // BAD: Operator
      |              ^
%Error: t/t_preproc_ifexpr_bad.v:31:10: Syntax error in `ifdef () expression; unexpected: 'TEXT'
   31 | `ifdef ( % )  // BAD: % is syntax error
      |          ^
%Error: t/t_preproc_ifexpr_bad.v:31:12: Syntax error in `ifdef () expression
   31 | `ifdef ( % )  // BAD: % is syntax error
      |            ^
%Error: t/t_preproc_ifexpr_bad.v:35:1: Expecting define name. Found: ENDIF
   35 | `endif
      | ^~~~~~
%Error: t/t_preproc_ifexpr_bad.v:37:1: Expecting define name. Found: IFDEF
   37 | `ifdef ( ONE // BAD: Missing paren
      | ^~~~~~
%Error: t/t_preproc_ifexpr_bad.v:38:1: Syntax error in `ifdef () expression; unexpected: 'TEXT'
   38 | `endif
      | ^
%Error: t/t_preproc_ifexpr_bad.v:41:1: EOF in unterminated preprocessor expression
%Error: t/t_preproc_ifexpr_bad.v:34:2: syntax error, unexpected ')'
   34 |  )  
      |  ^
%Error: Exiting due to
